# OOP-Lab7

./: CMakeLists.txt  README.md  bear.cpp  bear.h  factory.cpp  factory.h  game_manager.cpp  game_manager.h  knight.cpp  knight.h  main.cpp  npc.cpp  npc.h  observer.cpp  observer.h  orc.cpp  orc.h  tests.cpp  visitor.cpp  visitor.h
